# qgen-engine

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yaml  pyproject.toml  qodana.yaml  sample_env
.claude/agents/: SAM.md
api/: __init__.py
api/dependencies/: authentication.py  cache.py  cors_override.py  db.py  error_handler.py  logging.py  mailer.py  ratelimiter.py
api/v1/: address_api.py  analytics_api.py  application_api.py  approval_api.py  attachment_api.py  audit_api.py  auth_api.py  base_api.py  client_api.py  comment_api.py  file_api.py  layout_api.py  permission_api.py  quotation_api.py  role_api.py  role_permission_api.py  router.py  system_api.py  user_api.py  user_workspace_api.py  workflow_api.py  workflow_stage_api.py  workspace_address_api.py  workspace_api.py  workspace_type_api.py
config/: permissions.json  roles.json  workspace_types.json  workspaces.json
engine/: __init__.py
engine/datasources/: mssql_ds.py  oracle_ds.py  postgres_ds.py  redis_ds.py
engine/middleware/: amq_middleware.py  base_middleware.py
engine/models/: __init__.py  address_model.py  application_model.py  approval_model.py  attachment_model.py  audit_model.py  base_model.py  client_model.py  comment_model.py  credential_model.py  file_model.py  layout_model.py  otp_model.py  permission_model.py  quotation_change_history_model.py  quotation_model.py  role_model.py  role_permission_model.py  (+9 more)
mailer/: __main__.py
migrations/: env.py
seeder/: __main__.py  permission_seeder.py  role_seeder.py  user_seeder.py  workspace_seeder.py  workspace_type_seeder.py
(+109 files in other folders)
